# resoto-datalink

./: LICENSE  Makefile  README.md  pyproject.toml  requirements-all.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build_and_publish.yml
fixdatalink/: analytics.py  batch_stream.py  collect_plugins.py  remote_graph.py  schema_utils.py  show_progress.py  snowflake.py  sql.py
fixdatalink/arrow/: model.py  type_converter.py  writer.py
resotodatalink/: analytics.py
tests/: batch_stream_test.py  collect_plugins_test.py  conftest.py  remote_graph_test.py  sql_test.py
tests/arrow/: model_test.py  writer_test.py
